# rlbook

./: .buildinfo  2025-11-12 10-35-17.txt  README.html  README.md  WRITING_GUIDELINES.html  _config.yml  _toc.yml  adp.html  adp.md  amortization.json  amortization.md  appendix-examples.json  appendix-ivps.json  appendix-nlp.json  appendix.html  appendix.md  appendix_examples.md  appendix_ivps.html  appendix_ivps.md  appendix_nlp.html  appendix_nlp.md  batch-rl.json  batch_rl.md  bibliography.html  bibliography.json  bibliography.md  cadp.html  cadp.json  cadp.md  cocp.html  cocp.json  cocp.md  collocation.json  collocation.md  config.json  dp.html  dp.json  dp.md  draft.html  draft.md  (+66 more)
_sources/: WRITING_GUIDELINES.md  adp.md  appendix.md  appendix_examples.md  appendix_ivps.md  appendix_nlp.md  cadp.md  cocp.md  dp.md  draft.md  final_project_description.md  intro.md  judd.md  midterm_exam_grading_rubric_50pt.md  midterm_question_projection_methods.md  mpc.md  ocp.md  projdp.md  proposal.md  puterman.md  regmdp.md  simulation.md  ssm.md
_static/: collocation_illustration.py  compressor_surge_data_multi.npz  custom.css  discretization.html  do_mpc_batch_bioreactor.py  do_mpc_batch_bioreactor_animated.py  eco-cruise-demo.html  era5_mtl_20230601_12.grib  hydro-demo-enhanced.html  hydro-demo-realistic.html  hydro-demo-simple.html  hydro-demo.html  hydro-economic-demo.html  hydro-landscape-demo.html  hydro-optimization-demo.html  hydro.js  hydro.py  hydro_multiple_shooting.py  iframe-modal-usage.md  iframe-modal.js  latex_preamble.tex  multiple-shooting-demo.html  prog.py  (+10 more)
(+109 files in other folders)
