[project]
name = "rlbook"
version = "0.1.0"
description = "Practical Reinforcement Learning: From Algorithms to Applications"
authors = [
    {name = "Pierre-Luc Bacon"}
]
requires-python = ">=3.12"
dependencies = [
    "ecos>=2.0.14",
    "jupyter-book>=2.0.0",
    "matplotlib",
    "numpy",
    "scipy",
    "sphinx-proof",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-tikz",
    "sphinxcontrib-bibtex",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv]
dev-dependencies = [] 
